force-app/main/default/objects/BatchHistoryDetail__c/BatchHistoryDetail__c.object-meta.xml
<CustomObject>
    <label>Batch History Detail</label>
    <nameField>
        <displayFormat>BHD-{000000}</displayFormat>
        <label>Batch History Detail No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch History Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>