force-app/main/default/objects/BatchHistoryDetail__c/fields/Batch_History__c.field-meta.xml
<CustomField>
    <fullName>Batch_History__c</fullName>
    <label>Batch History</label>
    <referenceTo>BatchHistory__c</referenceTo>
    <relationshipLabel>Batch History Detail</relationshipLabel>
    <relationshipName>Batch_History_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>