force-app/main/default/objects/BatchHistoryDetail__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Message</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>