force-app/main/default/objects/BatchHistoryDetail__c/fields/MessageDetails__c.field-meta.xml
<CustomField>
    <fullName>MessageDetails__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Message Details</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>